--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1365,6 +1365,13 @@ workflows:
           binary_type: native
           # NOTE: One of the dependencies (fsevents) fails to build its native extension on node.js 12+.
           nodejs_version: '10'
+      - t_ems_ext:
+          <<: *workflow_ubuntu2004_static
+          name: t_native_test_ext_trident
+          project: trident
+          binary_type: native
+          # NOTE: Tests crash on nodejs 17: "Error: error:0308010C:digital envelope routines::unsupported"
+          nodejs_version: '16'
 
       # Windows build and tests
       - b_win: *workflow_trigger_on_tags
